MDEV-7867: Add binlog header to GRA_.log file